--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="PartyBuilDingMatrixDetails_name">党建矩阵详情</string>
     <string name="PartyMembership_name">党员关系转移</string>
     <string name="OrganizingLife_name">组织生活</string>
+    <string name="OrganizingLifeDeatle_name">组织生活详情</string>
     <string name="StyleOfForestArea_name">林区风采</string>
     <string name="DevelopingPartyMembers_name">发展党员情况</string>
     <string name="PartyMembershipDues_name">一键代缴费</string>
