--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="Act_StyleOfForestAreaDetails_name">林区分采详情</string>
     <string name="CraftsmanTrainingDetails_name">工匠培养详情页</string>
     <string name="CraftsmanTraining_name">工匠培养</string>
+    <string name="Strengthen_name">党务工作学习强局</string>
 </resources>
