--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="CraftsmanTrainingDetails_name">工匠培养详情页</string>
     <string name="CraftsmanTraining_name">工匠培养</string>
     <string name="Strengthen_name">党务工作学习强局</string>
+    <string name="LectureHall_name">林场大讲堂</string>
 </resources>
