--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="CraftsmanTraining_name">工匠培养</string>
     <string name="Strengthen_name">党务工作学习强局</string>
     <string name="LectureHall_name">林场大讲堂</string>
+    <string name="LectureDetails_name">在线课堂</string>
 </resources>
