增加新得体会

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="Strengthen_name">党务工作学习强局</string>
     <string name="LectureHall_name">林场大讲堂</string>
     <string name="LectureDetails_name">在线课堂</string>
+    <string name="WritingExperience_name">写心得</string>
+    <string name="Drafts_name">草稿箱</string>
 </resources>
